--- a/src/index.html
+++ b/src/index.html
@@ -1725,7 +1725,7 @@
         </div>
 
         <div style="width: 210px">
-          <datepicker-component date-format="MM-DD-YYYY"  form-layout="inline" required validation validation-message="Invalid date"></datepicker-component>
+          <datepicker-component date-format="MM-DD-YYYY"  form-layout="horizontal" label-cols="col-md-4 col-sm-6" input-col="8" required validation validation-message="Invalid date"></datepicker-component>
         </div>
 
         <div style="margin-bottom: 20px">
@@ -1733,7 +1733,7 @@
         </div>
 
         <div style="width: 210px">
-          <datepicker-component date-format="MM-DD-YYYY" form-layout="inline" plumage required validation validation-message="Invalid date"></datepicker-component>
+          <datepicker-component date-format="MM-DD-YYYY" plumage required validation validation-message="Invalid date"></datepicker-component>
         </div>
       </div>
     </app-wrapper>
