date range picker component and tests

--- a/src/index.html
+++ b/src/index.html
@@ -1725,7 +1725,7 @@
         </div>
 
         <div style="width: 210px">
-          <datepicker-component date-format="MM-DD-YYYY"  form-layout="horizontal" label-cols="col-md-4 col-sm-6" input-col="8" required validation validation-message="Invalid date"></datepicker-component>
+          <datepicker-component date-format="MM-DD-YYYY" label-cols="col-md-4 col-sm-6" input-col="8" required validation validation-message="Invalid date"></datepicker-component>
         </div>
 
         <div style="margin-bottom: 20px">
@@ -1734,6 +1734,22 @@
 
         <div style="width: 210px">
           <datepicker-component date-format="MM-DD-YYYY" plumage required validation validation-message="Invalid date"></datepicker-component>
+        </div>
+
+        <div>
+          <date-range-picker-component show-long range-picker></date-range-picker-component>
+        </div>
+
+        <div style="width: 325px">
+          <date-range-picker-component show-long></date-range-picker-component>
+        </div>
+
+        <div>
+          <date-range-picker-component plumage show-iso range-picker></date-range-picker-component>
+        </div>
+
+        <div style="width: 325px">
+          <date-range-picker-component plumage show-ymd ></date-range-picker-component>
         </div>
       </div>
     </app-wrapper>
